[workspace]
members = [".", "wiz_hook"]
resolver = "3"

[package]
name = "wiz-packets"
version = "1.0.0"
edition = "2024"
description = "Wizard101 KINP/DML Network Packet Logger"

[dependencies]
eframe = "0.29"
egui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
quick-xml = { version = "0.37", features = ["serialize"] }
crossbeam-channel = "0.5"
parking_lot = "0.12"
flate2 = "1"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Memory",
    "Win32_System_LibraryLoader",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Pipes",
    "Win32_System_IO",
] }

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 2
